improved slider. still not finished

--- a/scripts/projects.json
+++ b/scripts/projects.json
@@ -8,7 +8,7 @@
     {
       "Title": "Deep",
       "Text": "This is deep. I've designed this webshop for bass enthusiast. The goal is to put only a few, high-class and carefully selected basses in the spotlight. The shop is supposed to be less loaded then average instrument retailers to help the user focus on what matters: a good bass.",
-      "ProjectImgs": ["../img/deep-mock.png","../img/brief.jpg", "../img/brief.png"]
+      "ProjectImgs": ["../img/deep-mock.png"]
     },
     {
       "Title": "Wap",
