exchanged png with jpg

--- a/scripts/projects.json
+++ b/scripts/projects.json
@@ -3,7 +3,7 @@
     {
       "Title": "Shopme",
       "Text": "This is shopme. I've designed and coded this web app to help people out when they are struggling with their groceries. You can try shopme by yourself if you follow <a href='https://shopmee.netlify.app/' target='_blank' alt='The link to my web app shopme.'>this Link</a>. There's no fancy version for regular desktop PCs. Therefore, the experience is best if you visit it with your mobile phone. To be continued!",
-      "ProjectImgs": [ "../img/shopme-blue-bk.png", "../img/shopme-mkup2.jpg"]
+      "ProjectImgs": [ "../img/shopme-blue-bk.jpg", "../img/shopme-mkup2.jpg"]
     },
     {
       "Title": "Deep",
@@ -13,7 +13,7 @@
     {
       "Title": "Wap",
       "Text": "This is my map-app called Wap. I've designed and coded it to help people find a nice spot in nature. It's like google maps but for hipsters and nature lovers. You can sign up to share your favourite places with your friends and the world. Enjoy!",
-      "ProjectImgs": ["../img/wap1-small.jpg", "../img/wap-cropped.png"]
+      "ProjectImgs": ["../img/wap1-small.jpg", "../img/wap-cropped.jpg"]
     }
   ]
 }
