--- a/scripts/projects.json
+++ b/scripts/projects.json
@@ -2,17 +2,17 @@
   "Projects": [
     {
       "Title": "Shopme",
-      "Text": "This is shopme. I've designed and coded this web app to help people out when they are struggling with their groceries. You can try shopme by yourself if you follow <a href='https://shopmee.netlify.app/' target='_blank' alt='The link to my web app shopme.'>this Link</a>. There's no fancy version for regular desktop PCs. Therefore, the experience is best if you visit it with your mobile phone. To be continued!",
+      "Text": "This is shopme. I've designed and coded this web app to help people out when they are struggling with their groceries. You can try shopme by yourself if you follow <a href='https://shopmee.netlify.app/' target='_blank' alt='The link to my web app shopme.'>this Link</a>. There's no fancy version for regular desktop PCs. Therefore, the experience is best if you visit it with your mobile phone.",
       "ProjectImgs": [ "../img/shopme-blue-bk.jpg", "../img/shopme-mkup2.jpg"]
     },
     {
       "Title": "Deep",
       "Text": "This is deep. It's a webshop concept that I've designed for bass enthusiast. The goal is to put only a few, high-class and carefully selected basses in the spotlight. The shop is supposed to be less loaded then average instrument retailer webshops to help the user focus on finding what matters to them most: a good bass.",
-      "ProjectImgs": ["../img/deep-laptop.jpg","../img/deep1.jpg"]
+      "ProjectImgs": ["../img/deep1.jpg","../img/deep-laptop.jpg"]
     },
     {
       "Title": "Wap",
-      "Text": "This is my map-app called Wap. I've designed it to help people find a nice spot in nature. It's like google maps but for hipsters and nature lovers. You can sign up to share your favourite places with your friends and the world. Enjoy!",
+      "Text": "This is my map-app called Wap. I've designed it to help people find a nice spot in nature. It's like google maps but for hipsters and nature lovers. You can sign up to share your favourite places with your friends and the world.",
       "ProjectImgs": ["../img/wap1-small.jpg", "../img/wap-cropped.jpg"]
     }
   ]
