--- a/scripts/projects.json
+++ b/scripts/projects.json
@@ -7,7 +7,7 @@
     },
     {
       "Title": "Deep",
-      "Text": "This is deep. It's a webshop concept that I've designed for bass enthusiast. The goal is to put only a few, high-class and carefully selected basses in the spotlight. The shop is supposed to be less loaded then average instrument retailer webshops to help the user focus on finding what matters to them most: a good bass.",
+      "Text": "This is deep. It's a webshop concept that I've designed for bass enthusiast. The goal is to put only a few, high-class and carefully selected basses in the spotlight. The shop is supposed to be less loaded than average instrument retailer webshops to help the user focus on finding what matters to them most: a good bass.",
       "ProjectImgs": ["../img/deep1.jpg","../img/deep-laptop.jpg"]
     },
     {
